WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191757
(
r238246
) [ MacOS Debug ] Layout Test http/wpt/webauthn/ctap-hid-failure.https.html is Crashing
https://bugs.webkit.org/show_bug.cgi?id=191757
Summary
(r238246) [ MacOS Debug ] Layout Test http/wpt/webauthn/ctap-hid-failure.http...
Truitt Savell
Reported
2018-11-16 10:34:08 PST
The following layout test is crashing on MacOS Debug http/wpt/webauthn/ctap-hid-failure.https.html Probable cause: This test was added in
https://trac.webkit.org/changeset/238166/webkit
and edited in
https://trac.webkit.org/changeset/238246/webkit
. It is crashing very consistently. Flakiness Dashboard:
https://webkit-test-results.webkit.org/dashboards/flakiness_dashboard.html#showAllRuns=true&tests=http%2Fwpt%2Fwebauthn%2Fctap-hid-failure.https.html
Crash Log:
https://build.webkit.org/results/Apple%20High%20Sierra%20Debug%20WK2%20(Tests)/r238277%20(5566)/http/wpt/webauthn/ctap-hid-failure.https-crash-log.txt
excerpt: Application Specific Information: CRASHING TEST: /workers/service/worker-fails-to-start.html Thread 0 Crashed:: Dispatch queue: com.apple.main-thread 0 com.apple.JavaScriptCore 0x0000000104302f50 WTFCrash + 16 (Assertions.cpp:255) 1 com.apple.WebKit 0x000000010d77e087 WTF::CompletionHandler<void (WebKit::HidConnection::DataSent)>::~CompletionHandler() + 87 (CompletionHandler.h:51) 2 com.apple.WebKit 0x000000010d779c35 WTF::CompletionHandler<void (WebKit::HidConnection::DataSent)>::~CompletionHandler() + 21 (CompletionHandler.h:52) 3 com.apple.WebKit 0x000000010e3dd3c3 WebKit::MockHidConnection::send(WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul>&&, WTF::CompletionHandler<void (WebKit::HidConnection::DataSent)>&&)::$_2::operator()()::'lambda'()::~'lambda'()() + 35 (MockHidConnection.cpp:75) 4 com.apple.WebKit 0x000000010e3dcab5 WebKit::MockHidConnection::send(WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul>&&, WTF::CompletionHandler<void (WebKit::HidConnection::DataSent)>&&)::$_2::operator()()::'lambda'()::~'lambda'()() + 21 (MockHidConnection.cpp:75) 5 com.apple.WebKit 0x000000010e3dd1f1 WTF::Function<void ()>::CallableWrapper<WebKit::MockHidConnection::send(WTF::Vector<unsigned char, 0ul, WTF::CrashOnOverflow, 16ul>&&, WTF::CompletionHandler<void (WebKit::HidConnection::DataSent)>&&)::$_2::operator()()::'lambda'()>::~CallableWrapper() + 49 (Function.h:91)
Attachments
Patch
(2.11 KB, patch)
2018-11-16 12:11 PST
,
Jiewen Tan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jiewen Tan
Comment 1
2018-11-16 12:11:13 PST
Created
attachment 355095
[details]
Patch
Jiewen Tan
Comment 2
2018-11-27 14:15:34 PST
Comment on
attachment 355095
[details]
Patch Thanks Chris for r+ this patch.
WebKit Commit Bot
Comment 3
2018-11-27 14:40:58 PST
Comment on
attachment 355095
[details]
Patch Clearing flags on attachment: 355095 Committed
r238579
: <
https://trac.webkit.org/changeset/238579
>
WebKit Commit Bot
Comment 4
2018-11-27 14:40:59 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5
2018-11-27 14:41:36 PST
<
rdar://problem/46289489
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug